<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_mapa" />

        <!-- Item neutro do espaço do botão SOS -->
        <item
            android:id="@+id/placeholder"
            android:enabled="false"
            android:title="" />

        <item
            android:id="@+id/nav_contatos"
            android:icon="@drawable/ic_contatos"
            android:title="@string/menu_contatos" />

        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_perfil" />

</menu>